# Paddle

./: .travis.yml  CMakeLists.txt  RELEASE.md
cmake/: coverallsGcovJsons.cmake  system.cmake
paddle/cuda/: CMakeLists.txt
paddle/cuda/include/: avx_mathfun.h  hl_avx_activation.h  hl_base.h  hl_cpu_activation.h  hl_cpu_gru.cuh  hl_cpu_lstm.cuh  hl_dso_loader.h  hl_gpu_activation.cuh  hl_gpu_gru.cuh  hl_gpu_lstm.cuh  hl_gru_ops.cuh  hl_lstm_ops.cuh  hl_recurrent_apply.cuh  lstm_op.cc
paddle/cuda/include/x86/: activation.h  gru.h  lstm.h
paddle/cuda/include/x86/avx/: activation.h  gru.h  lstm.h
paddle/cuda/src/: hl_avx_activation.cc  hl_avx_gru.cc  hl_avx_lstm.cc  hl_cpu_activation.cc  hl_cpu_gru.cc  hl_cpu_lstm.cc  hl_cuda_lstm.cu  hl_gpu_activation.cu  hl_perturbation_util.cu
paddle/cuda/src/x86/: activation.cc  gru.cc  gru_op.cc  lstm.cc  lstm_op.cc
paddle/cuda/src/x86/avx/: activation.cc  gru.cc  gru_op.cc  lstm.cc  lstm_op.cc
paddle/gserver/layers/: GruCompute.cpp  GruCompute.cu  LstmCompute.cpp  LstmCompute.cu
paddle/math/: MathFunctions.cpp  MathFunctions.h
paddle/scripts/docker/: build.sh
paddle/scripts/travis/: build_and_test.sh
paddle/trainer/tests/: CMakeLists.txt
paddle/utils/: DynamicLoad.cpp  DynamicLoad.h
